# hubstaff-cli

./: .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  deny.toml  dist-workspace.toml  install.sh  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: api.rs  auth.rs  check.rs  client.rs  command_index.rs  commands_list.rs  config.rs  config_commands.rs  error.rs  login.rs  main.rs  output.rs  persistence.rs  schema.rs
src/commands/: activities.rs  config_cmd.rs  daily_activities.rs  invites.rs  members.rs  mod.rs  notes.rs  orgs.rs  projects.rs  tasks.rs  teams.rs  time_entries.rs  users.rs
src/snapshots/: hubstaff__command_index__tests__schema_command_table_snapshot.snap
tests/: commands_test.rs
tests/fixtures/: schema.json
