[package]
name = "hubstaff-cli"
version = "0.1.0"
edition = "2024"
description = "Token-efficient CLI for the Hubstaff Public API v2"
license = "MIT"
repository = "https://github.com/chocksy/hubstaff-cli"

[[bin]]
name = "hubstaff-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tiny_http = "0.12"
open = "5"
dirs = "6"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
