[package]
name = "hubstaff"
version = "0.2.0"
edition = "2024"
description = "Token-efficient CLI for the Hubstaff Public API v2"
license = "MIT"
repository = "https://github.com/NetsoftHoldings/hubstaff-cli"

[[bin]]
name = "hubstaff"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tiny_http = "0.12"
open = "5"
dirs = "6"
rand = "0.9"
base64 = "0.22"
sha2 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
dotenvy = "0.15"

[dev-dependencies]
mockito = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
# SQL keywords and identifiers in docs (NOT VALID, ACCESS EXCLUSIVE, etc.) look awkward in backticks
doc_markdown = "allow"
# Internal helpers and CLI binary; #[must_use] annotation on every helper adds noise without benefit
must_use_candidate = "allow"
# We don't maintain exhaustive API docs with # Errors sections
missing_errors_doc = "allow"
