[package]
name = "hubstaff"
version = "0.3.1"
edition = "2024"
description = "Token-efficient CLI for the Hubstaff Public API v2"
license = "MIT"
repository = "https://github.com/NetsoftHoldings/hubstaff-cli"
homepage = "https://github.com/NetsoftHoldings/hubstaff-cli"
readme = "README.md"

[[bin]]
name = "hubstaff"
path = "src/main.rs"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dirs = "6"
tempfile = "3"
colored_json = "5"

[dev-dependencies]
mockito = "1"
insta = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dist]
inherits = "release"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
# SQL keywords and identifiers in docs (NOT VALID, ACCESS EXCLUSIVE, etc.) look awkward in backticks
doc_markdown = "allow"
# Internal helpers and CLI binary; #[must_use] annotation on every helper adds noise without benefit
must_use_candidate = "allow"
# We don't maintain exhaustive API docs with # Errors sections
missing_errors_doc = "allow"
